--- a/css/piano1.css
+++ b/css/piano1.css
@@ -154,6 +154,7 @@ body h2{
 	color: #104070;
 	margin: 0 auto;
 	text-shadow: 1px 1px 3px #848482;
+
 }
 
 #gh{
@@ -170,6 +171,8 @@ body h2{
 	margin-top: 30px;
 }
 
+
+
 #trade-name img {
 	display: none;
 }
@@ -179,6 +182,9 @@ body h2{
 	margin-top: 200px;
 }
 
+#thing p {
+	font-size: 15px;
+}
 #tuning h1 {
 	font-size: 40px;
 }
@@ -200,8 +206,13 @@ body h2{
 @media only screen and (max-width  : 1120px) {
 
 .w3-bar h2{
-	font-size: 20px;
+	font-size: 18px;
 	margin-top: 30px;
+}
+.w3-bar a {
+	margin: 0;
+	position: relative;
+	top: 30px;
 }
 
 #trade-name img {
@@ -216,18 +227,36 @@ body h2{
 #tuning h1 {
 	font-size: 40px;
 }
+#tuning p {
+	font-size: 20px;
+}
 
 #contact p{
 	
 	font-size: 20px;
 }
  #thing p {
- 	font-size: 20px;
+ 	font-size: 18px;
  }
  
  .w3-bar a {
 	
 	font-size: 16px;
+}
+#gg {
+	font-size: 30px;
+}
+#services h2 {
+	font-size: 40px;
+}
+
+iframe {
+	width: 373px;
+	height: 210px;
+
+}
+#video p {
+	font-size: 20px;
 }
 
 
